--- a/resources/src/main/resources/db/changelog/init/insert_configuration.yml
+++ b/resources/src/main/resources/db/changelog/init/insert_configuration.yml
@@ -3,6 +3,8 @@ databaseChangeLog:
       id: insert_configuration
       author: System
       changes:
+        - tagDatabase:
+            tag: INIT
         - insert:
             dbms: 'mysql, postgresql'
             tableName: DOM_CONFIGURATION
