--- a/resources/src/main/resources/db/changelog/v1.0.0/create_column_dom_holiday.yml
+++ b/resources/src/main/resources/db/changelog/v1.0.0/create_column_dom_holiday.yml
@@ -3,6 +3,8 @@ databaseChangeLog:
       id: addColumn-DOM_HOLIDAY
       author: System
       changes:
+        - tagDatabase:
+            tag: v1.0.0
         - addColumn:
             tableName: DOM_HOLIDAY
             columns:
