--- a/resources/src/main/resources/db/changelog/v1.0.0/v1.0.0.yml
+++ b/resources/src/main/resources/db/changelog/v1.0.0/v1.0.0.yml
@@ -5,4 +5,5 @@ databaseChangeLog:
       file: db/changelog/v1.0.0/create_column_dom_fixed_holiday.yml
   - include:
       file: db/changelog/v1.0.0/create_column_dom_holiday.yml
-
+  - include:
+      file: db/changelog/v1.0.0/create_column_dom_state.yml
