--- a/configuration/pom.xml
+++ b/configuration/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>init</artifactId>
@@ -11,112 +11,112 @@
 
     <artifactId>configuration</artifactId>
 
-		<properties>
-				<maven.compiler.source>17</maven.compiler.source>
-				<maven.compiler.target>17</maven.compiler.target>
-		</properties>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 
-		<profiles>
-			<profile>
-				<id>azure</id>
-				<dependencies>
-					<dependency>
-						<groupId>br.com.insidesoftwares.securitycommons</groupId>
-						<artifactId>azure-active-directory</artifactId>
-					</dependency>
-				</dependencies>
-			</profile>
-			<profile>
-				<id>keycloak</id>
-				<activation>
-					<activeByDefault>true</activeByDefault>
-				</activation>
-				<dependencies>
-					<dependency>
-						<groupId>br.com.insidesoftwares.securitycommons</groupId>
-						<artifactId>keycloak</artifactId>
-					</dependency>
-				</dependencies>
-			</profile>
-		</profiles>
+    <profiles>
+        <profile>
+            <id>azure</id>
+            <dependencies>
+                <dependency>
+                    <groupId>br.com.insidesoftwares.securitycommons</groupId>
+                    <artifactId>azure-active-directory</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>keycloak</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>br.com.insidesoftwares.securitycommons</groupId>
+                    <artifactId>keycloak</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
     <dependencies>
-			<dependency>
-				<groupId>br.com.insidesoftwares</groupId>
-				<artifactId>utils</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>br.com.insidesoftwares</groupId>
-				<artifactId>exception</artifactId>
-			</dependency>
+        <dependency>
+            <groupId>br.com.insidesoftwares</groupId>
+            <artifactId>utils</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>br.com.insidesoftwares</groupId>
+            <artifactId>exception</artifactId>
+        </dependency>
 
-			<dependency>
-				<groupId>br.com.insidesoftwares.dayoffmarker</groupId>
-				<artifactId>commons</artifactId>
-				<exclusions>
-					<exclusion>
-						<groupId>org.springframework.boot</groupId>
-						<artifactId>spring-boot-starter-validation</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.springframework.data</groupId>
-						<artifactId>spring-data-commons</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.mapstruct</groupId>
-						<artifactId>mapstruct</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>com.google.code.gson</groupId>
-						<artifactId>gson</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>io.fusionauth</groupId>
-						<artifactId>fusionauth-jwt</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.liquibase</groupId>
-						<artifactId>liquibase-core</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-					<groupId>org.springframework.data</groupId>
-					<artifactId>spring-data-redis</artifactId>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-data-jpa</artifactId>
-			</dependency>
-			<dependency>
-					<groupId>io.lettuce</groupId>
-					<artifactId>lettuce-core</artifactId>
-			</dependency>
+        <dependency>
+            <groupId>br.com.insidesoftwares.dayoffmarker</groupId>
+            <artifactId>commons</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-validation</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.springframework.data</groupId>
+                    <artifactId>spring-data-commons</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.mapstruct</groupId>
+                    <artifactId>mapstruct</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.code.gson</groupId>
+                    <artifactId>gson</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.fusionauth</groupId>
+                    <artifactId>fusionauth-jwt</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.liquibase</groupId>
+                    <artifactId>liquibase-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+        </dependency>
 
-			<dependency>
-				<groupId>org.springdoc</groupId>
-				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			</dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<configuration>
-						<source>17</source>
-						<target>17</target>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-maven-plugin</artifactId>
-					<configuration>
-						<skip>true</skip>
-					</configuration>
-				</plugin>
-			</plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
