--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.3</version>
+		<version>3.1.4</version>
 		<relativePath/>
 	</parent>
 
@@ -30,16 +30,16 @@
 	<description>System to manage birthdays, including Holidays and Weekends</description>
 
 	<properties>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 
-		<spring-boot.version>3.1.3</spring-boot.version>
+		<spring-boot.version>3.1.4</spring-boot.version>
 		<spring.framework.version>6.0.12</spring.framework.version>
-		<spring-data-redis.version>3.1.3</spring-data-redis.version>
+		<spring-data-redis.version>3.1.4</spring-data-redis.version>
 
 		<checkstyle-maven-plugin.version>3.0.0</checkstyle-maven-plugin.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
-		<lombok.version>1.18.28</lombok.version>
+		<lombok.version>1.18.30</lombok.version>
 		<gson.version>2.10.1</gson.version>
 
 		<postgresql.version>42.6.0</postgresql.version>
@@ -60,18 +60,6 @@
         <snakeyaml.version>2.1</snakeyaml.version>
         <json.version>20230618</json.version>
 	</properties>
-
-	<profiles>
-		<profile>
-			<id>default</id>
-			<properties>
-				<spring.profiles.active>postgres</spring.profiles.active>
-			</properties>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-		</profile>
-	</profiles>
 
 	<dependencyManagement>
 		<dependencies>
@@ -360,8 +348,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
+					<source>21</source>
+					<target>21</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
