--- a/server/application/src/main/resources/bootstrap.yml
+++ b/server/application/src/main/resources/bootstrap.yml
@@ -1,3 +1,8 @@
+server:
+  port: ${DAY_OFF_MARKER_PORT:8080}
+  servlet:
+    context-path: /dayoffmarker
+
 spring:
   application:
     name: InsideDayOffMarker
@@ -9,15 +14,29 @@ spring:
     database-change-log-table: DOM_DATABASECHANGELOG
   mvc:
     locale: pt-BR
+  profiles:
+    active: ${DAY_OFF_MARKER_PROFILES:native}
+  cloud:
+    config:
+      uri: ${CLOUD_CONFIG_URI:http://localhost:8888}
+      username: ${CLOUD_CONFIG_NAME:ADMIN}
+      password: ${CLOUD_CONFIG_PASSWORD:ADMIN}
+  boot:
+    admin:
+      client:
+        url: ${CLOUD_ADMIN_URL:http://localhost:8889/admin}
+      instance:
+        prefer-ip: true
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${CLOUD_EUREKA_URL:http://localhost:8889/eureka}
+  instance:
+    preferIpAddress: true
 
 liquibase:
   change-log: classpath:db.changelog-master.yaml
-
-server:
-  port: 8880
-  servlet:
-    context-path: /dayoffmarker
-
 management:
   endpoints:
     web:
