Update for Spring boot 3.2, changing the import of the Idempotent dependency and updating the version of the dependencies

--- a/Dockerfile.administration
+++ b/Dockerfile.administration
@@ -1,4 +1,4 @@
-FROM openjdk:21-slim
+FROM eclipse-temurin:21.0.1_12-jre-ubi9-minimal
 
 RUN rm -rf /etc/localtime && ln -s /usr/share/zoneinfo/America/Sao_Paulo /etc/localtime
 
