--- a/domain/src/test/resources/application.yml
+++ b/domain/src/test/resources/application.yml
@@ -5,6 +5,9 @@ logging:
     root: INFO
 
 spring:
+  cloud:
+    compatibility-verifier:
+      enabled: false
   application:
     name: InsideDayOffMarker
   main:
