--- a/server/application-administration/src/main/resources/bootstrap.yml
+++ b/server/application-administration/src/main/resources/bootstrap.yml
@@ -17,21 +17,20 @@ spring:
   profiles:
     active: ${DAY_OFF_MARKER_PROFILES:native}
   cloud:
+    compatibility-verifier:
+      enabled: false
     config:
       uri: ${CLOUD_CONFIG_URI:http://localhost:8888}
       username: ${CLOUD_CONFIG_NAME:ADMIN}
       password: ${CLOUD_CONFIG_PASSWORD:ADMIN}
-  boot:
-    admin:
-      client:
-        url: ${CLOUD_ADMIN_URL:http://localhost:8889/admin}
-      instance:
-        prefer-ip: true
   batch:
     jdbc:
       initialize-schema: always
     job:
       enabled: false
+  threads:
+    virtual:
+      enabled: true
 
 eureka:
   client:
