--- a/service/service-administration/pom.xml
+++ b/service/service-administration/pom.xml
@@ -32,7 +32,7 @@
                     <artifactId>spring-boot-starter-data-jpa</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>com.trendyol</groupId>
+                    <groupId>br.com.insidesoftwares</groupId>
                     <artifactId>Jdempotent-spring-boot-redis-starter</artifactId>
                 </exclusion>
             </exclusions>
@@ -50,7 +50,7 @@
                     <artifactId>commons</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>com.trendyol</groupId>
+                    <groupId>br.com.insidesoftwares</groupId>
                     <artifactId>Jdempotent-spring-boot-redis-starter</artifactId>
                 </exclusion>
             </exclusions>
@@ -68,7 +68,7 @@
                     <artifactId>commons</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>com.trendyol</groupId>
+                    <groupId>br.com.insidesoftwares</groupId>
                     <artifactId>Jdempotent-spring-boot-redis-starter</artifactId>
                 </exclusion>
             </exclusions>
@@ -86,7 +86,7 @@
                     <artifactId>gson</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>com.trendyol</groupId>
+                    <groupId>br.com.insidesoftwares</groupId>
                     <artifactId>Jdempotent-spring-boot-redis-starter</artifactId>
                 </exclusion>
                 <exclusion>
@@ -170,7 +170,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.10</version>
+                        <version>0.8.11</version>
                         <executions>
                             <execution>
                                 <id>default-prepare-agent</id>
@@ -189,7 +189,7 @@
                     <plugin>
                         <groupId>org.owasp</groupId>
                         <artifactId>dependency-check-maven</artifactId>
-                        <version>8.3.1</version>
+                        <version>8.4.2</version>
                         <executions>
                             <execution>
                                 <goals>
@@ -197,6 +197,13 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-checkstyle-plugin</artifactId>
+                        <configuration>
+                            <configLocation>${project.parent.basedir}/etc/devops/checkstyle/checkstyle.xml</configLocation>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
