--- a/controller/controller-search/pom.xml
+++ b/controller/controller-search/pom.xml
@@ -37,7 +37,7 @@
                     <artifactId>domain</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>com.trendyol</groupId>
+                    <groupId>br.com.insidesoftwares</groupId>
                     <artifactId>Jdempotent-spring-boot-redis-starter</artifactId>
                 </exclusion>
             </exclusions>
@@ -107,7 +107,7 @@
                     <artifactId>lettuce-core</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>com.trendyol</groupId>
+                    <groupId>br.com.insidesoftwares</groupId>
                     <artifactId>Jdempotent-spring-boot-redis-starter</artifactId>
                 </exclusion>
                 <exclusion>
@@ -158,7 +158,7 @@
                     <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
-                        <version>0.8.10</version>
+                        <version>0.8.11</version>
                         <executions>
                             <execution>
                                 <id>default-prepare-agent</id>
@@ -177,7 +177,7 @@
                     <plugin>
                         <groupId>org.owasp</groupId>
                         <artifactId>dependency-check-maven</artifactId>
-                        <version>8.3.1</version>
+                        <version>8.4.2</version>
                         <executions>
                             <execution>
                                 <goals>
@@ -185,6 +185,13 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-checkstyle-plugin</artifactId>
+                        <configuration>
+                            <configLocation>${project.parent.basedir}/etc/devops/checkstyle/checkstyle.xml</configLocation>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
